fix layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ section > .title{
 }
 
 .hero .intro{
+  width: 65vw;
   color: var(--dark-gray);
 }
 
@@ -161,7 +162,7 @@ section > .title{
   margin: 1em 0 1.75em 0;
 }
 
-.hero .illustration svg{
+.hero .illustration {
   width: 35vw;
 }
 
@@ -192,7 +193,7 @@ section > .title{
   border-radius: 1.5rem;
 }
 
-.cards li header img{
+.cards img{
   width: 5em;
   height: 5em;
   border: .25rem solid var(--white);
@@ -200,7 +201,7 @@ section > .title{
   margin-top: -5rem;
 }
 
-.cards li header .card-title{
+.cards .card-title{
   font-size: 1.25rem;
 }
 
@@ -215,13 +216,14 @@ section > .title{
 
 .projets .content{
   display: grid;
+  column-gap: .5rem;
   grid-template-columns: repeat(3, 1fr);
   min-height: 85vh;
   padding-bottom: 2rem;
 }
 
 .content details {
-  margin: .5rem 1rem;
+  margin: .5rem;
   padding: .5rem;
   background: linear-gradient(180deg, var(--white) 50%, #FFFFFF 100%);
   border-radius: 1rem;
@@ -401,10 +403,10 @@ section > .title{
   }
 
   .hero .intro{
-    max-width: 100vw;
+    width: 85vw;
   }
 
-  .hero .illustration svg{
+  .hero .illustration{
     width: 85vw;
     height: 50vh;
   }
